BPER/DEVF/force-app/main/default/objects/CH_IngaggioRetiEsterne__c/CH_IngaggioRetiEsterne__c.object-meta.xml
<CustomObject>
    <label>CH - Ingaggio Reti Esterne</label>
    <nameField>
        <displayFormat>IREX-{00000000}</displayFormat>
        <label>CH - Ingaggio Reti Esterne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH - Ingaggio Reti Esterne</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>