BPER/DEVF/force-app/main/default/objects/CH_IngaggioRetiEsterne__c/fields/CRM_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Esito__c</fullName>
    <label>Esito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente non interessato</fullName>
            </value>
            <value>
                <fullName>Cliente non soddisfatto</fullName>
            </value>
            <value>
                <fullName>Cliente soddisfatto</fullName>
            </value>
            <value>
                <fullName>Consulenza Effettuata</fullName>
            </value>
            <value>
                <fullName>Da ricontattare</fullName>
            </value>
            <value>
                <fullName>Fissato appuntamento</fullName>
            </value>
            <value>
                <fullName>Gestione del credito</fullName>
            </value>
            <value>
                <fullName>Ingaggio agente</fullName>
            </value>
            <value>
                <fullName>Monitoraggio piano</fullName>
            </value>
            <value>
                <fullName>Prodotto venduto</fullName>
            </value>
            <value>
                <fullName>Revisione condizioni</fullName>
            </value>
            <value>
                <fullName>Richiesta informazioni</fullName>
            </value>
            <value>
                <fullName>Rifiuto della Banca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>