BPER/DEVF/force-app/main/default/objects/CH_IngaggioRetiEsterne__c/fields/CRM_Lcontatto__c.field-meta.xml
<CustomField>
    <fullName>CRM_Lcontatto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>L_contatto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>